--- a/assets/style.css
+++ b/assets/style.css
@@ -15,6 +15,23 @@ h1 {
   font-family: sans-serif;
 }
 
+footer {
+  display: flex;
+  align-items: center;
+}
+
+h2 {
+  font-family: sans-serif;
+  font-size: 18px;
+}
+
+a {
+  color: black;
+  margin: 0px 0px 0px 10px;
+  text-decoration: none;
+}
+
+
 html {
   background: url(./farm-background.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
