--- a/assets/style.css
+++ b/assets/style.css
@@ -31,6 +31,27 @@ a {
   text-decoration: none;
 }
 
+#mainProgress {
+  width: auto;
+  height: 20px;
+  position: absolute;
+  top: 400px;
+
+  width: 226px;
+  /* height: 170px; */
+  /* border: 1px solid #eee; */
+  /* background-color: #ddd; */
+  padding: 2px;
+  text-align: center;
+}
+
+.progress {
+  width: 0;
+  height: 20px;
+  background-color: #9c9;
+  bottom: 0;
+}
+
 
 html {
   background: url(./farm-background.jpg) no-repeat center center fixed;
