--- a/assets/style.css
+++ b/assets/style.css
@@ -52,6 +52,15 @@ a {
   bottom: 0;
 }
 
+#Instructions {
+  top: 120px;
+  position: absolute;
+  display: none;
+  background-color: white;
+  width: 400px;
+  height: 400px;
+}
+
 
 html {
   background: url(./farm-background.jpg) no-repeat center center fixed;
