--- a/assets/style.css
+++ b/assets/style.css
@@ -76,7 +76,11 @@ a {
 #high-score h2 {
   font-family: 'Ranchers', cursive;
   font-size: 28px;
-  margin-bottom: 10px;
+  margin-bottom: 0px;
+}
+
+#high-score p {
+  margin-bottom: 0px;
 }
 
 #high-score {
@@ -91,7 +95,8 @@ a {
   flex-direction: column;
   align-items: center;
   width: 400px;
-  height: 400px;
+  height: auto;
+  padding-bottom: 30px;
 }
 
 #high-score button {
